syntax = "proto3";

option java_package = "m1.archi.models";
package m1.archi;

import "models/utilisateur.proto";
import "models/hotelModels/hotel.proto";

message Agence {
  int64 idAgence = 1;
  string nom = 2;
  map<int32, Hotel> reductionHotels = 3;
  repeated Utilisateur listeUtilisateurs = 4;
}